# C-onway

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: asprintf.h  environment.h  life.h  neighbourhoods.h  palettes.h  rules.h
src/: environment.c  life.c  main.c  neighbourhoods.c  palettes.c  rules.c
